Friends feature added

--- a/client/src/Pages/FriendProfile/FriendProfile.css
+++ b/client/src/Pages/FriendProfile/FriendProfile.css
@@ -4,9 +4,8 @@
 
 .home-contents{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding-top: 2rem;
-
 }
 
 .search-input{
